# upnm

./: README.md  build.sh  test.sh
code/: CMakeLists.txt
code/lib/: pnm.c  pnm.h
code/test/: test.c
data/: einstein.pbm
